# SnakeGame

./: CMakeLists.txt  Food.cpp  Game.cpp  Game.h  Input.cpp  Input.h  README.md  Renderer.cpp  Renderer.h  SaveSystem.cpp  SaveSystem.h  Snake.cpp  main.cpp
core/: GameLoop.cpp  GameLoop.h  StateMachine.cpp  StateMachine.h
gameplay/: Food.cpp  Food.h  Snake.h
persistence/: SaveSystem.cpp  SaveSystem.h
systems/: InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  TimeSystem.cpp  TimeSystem.h
